Fix missing .panel class issue
Somehow Sass 3.4 behaves differently with Foundation 5.3 than with 3.3
Fixed by fixing Sass to the 3.3 series
Hopefully this fixes too long compile times on Heroku as well

--- a/app/assets/stylesheets/framework_and_overrides.scss
+++ b/app/assets/stylesheets/framework_and_overrides.scss
@@ -50,8 +50,8 @@ footer {
 
 // CSS styling for devise errors
 #error_explanation {
-  @include panel;
-  @include radius;
+  @extend .panel;
+  @extend .radius;
   @extend .alert-box;
   
   background-color: $alert-color;
